--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   publish:
@@ -18,7 +19,7 @@ jobs:
 
       - name: get grpc-web
         run: |
-          curl --fail --location 'https://github.com/grpc/grpc-web/releases/download/1.5.0/protoc-gen-grpc-web-1.5.0-linux-x86_64' -o protoc-gen-grpc-web
+          curl --fail --location https://github.com/grpc/grpc-web/releases/download/1.5.0/protoc-gen-grpc-web-1.5.0-linux-x86_64 -o protoc-gen-grpc-web
           chmod +x protoc-gen-grpc-web
           sudo install -t /usr/local/bin protoc-gen-grpc-web
 
@@ -27,6 +28,7 @@ jobs:
 
       - name: Publish
         uses: JS-DevTools/npm-publish@v2
+        if: github.event_name == 'push' && github.ref_name == 'main'
         with:
           token: ${{ secrets.NPM_TOKEN }}
           package: rpc/js/package.json
