--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,12 @@ jobs:
 
       - name: deps
         run: |
-          sudo apt-get install -qy protobuf-compiler
+          # protoc
+          curl --fail --location https://github.com/protocolbuffers/protobuf/releases/download/v28.0/protoc-28.0-linux-x86_64.zip -o protoc.zip
+          unzip protoc.zip bin/protoc
+          sudo install -t /usr/local/bin bin/protoc
+
+          # grpc-web
           curl --fail --location https://github.com/grpc/grpc-web/releases/download/1.5.0/protoc-gen-grpc-web-1.5.0-linux-x86_64 -o protoc-gen-grpc-web
           chmod +x protoc-gen-grpc-web
           sudo install -t /usr/local/bin protoc-gen-grpc-web
