--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,19 +9,32 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    container: ghcr.io/viamrobotics/rdk-devenv:amd64
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           persist-credentials: false
 
-      - name: get grpc-web
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.21'
+
+      - name: deps
         run: |
+          # protoc
+          curl --fail --location https://github.com/protocolbuffers/protobuf/releases/download/v28.0/protoc-28.0-linux-x86_64.zip -o protoc.zip
+          unzip protoc.zip bin/protoc
+          sudo install -t /usr/local/bin bin/protoc
+
+          # grpc-web
           curl --fail --location https://github.com/grpc/grpc-web/releases/download/1.5.0/protoc-gen-grpc-web-1.5.0-linux-x86_64 -o protoc-gen-grpc-web
           chmod +x protoc-gen-grpc-web
           sudo install -t /usr/local/bin protoc-gen-grpc-web
+
+          # protobuf-javascript
+          curl --location --fail https://github.com/protocolbuffers/protobuf-javascript/releases/download/v3.21.4/protobuf-javascript-3.21.4-linux-x86_64.tar.gz -o protobuf-js.tgz
+          tar xf protobuf-js.tgz bin/protoc-gen-js
+          sudo install -t /usr/local/bin bin/protoc-gen-js
 
       - name: Install Build
         run: make build-web
