--- a/rpc/examples/fileupload/frontend/package.json
+++ b/rpc/examples/fileupload/frontend/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
-    "@improbable-eng/grpc-web": "^0.13.0",
-    "@viamrobotics/rpc": "^0.1.25",
-    "google-protobuf": "^3.14.0"
+    "@bufbuild/protobuf": "^1.10.0",
+    "@connectrpc/connect": "^1.5.0",
+    "@connectrpc/connect-web": "^1.5.0",
+    "@viamrobotics/rpc": "file:../../../js"
   },
   "devDependencies": {
     "ansi-regex": ">=5.0.1",
     "set-value": ">=4.0.1",
-    "@types/google-protobuf": "^3.7.4",
     "concurrently": "^5.3.0",
     "ts-loader": "^8.0.14",
     "ts-protoc-gen": "^0.14.0",
